--- a/final_project/esp/platformio.ini
+++ b/final_project/esp/platformio.ini
@@ -15,9 +15,12 @@ framework = arduino
 lib_deps =
     fastled/FastLED
     Wire
-    adafruit/Adafruit BusIO
     adafruit/Adafruit GFX Library
     https://github.com/mrfaptastic/ESP32-HUB75-MatrixPanel-I2S-DMA.git
+
+build_flags =
+    -DUSE_GFX_ROOT
+
 upload_speed = 460800
 monitor_speed = 115200
 monitor_filters = esp32_exception_decoder
